Applied  IAsyncEnumerable and MetroMahapps.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,18 +1,39 @@
-﻿<Window x:Class="WpfApp1.MainWindow"
+﻿<Controls:MetroWindow x:Class="WpfApp1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        
+        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+        xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+        Dialog:DialogParticipation.Register="{Binding}"
+        
         xmlns:local="clr-namespace:WpfApp1"      
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800"
+        Name="Main"       
+                      
+        BorderThickness="5"
+        
         WindowStartupLocation="CenterScreen">
 
-
     <Grid>
+        
+        
         <Image Source="/View/Images/SplashScreen.jpg"/>
-        <Frame Source="/View/Pages/MenuPage.xaml" NavigationUIVisibility="Hidden"/>
-        
-        
+
+        <Controls:MetroProgressBar Height="25" Margin="0 200 0 0" VerticalAlignment="Center" 
+                                   Foreground="#FF8277CB" IsIndeterminate="True" 
+                                   EllipseDiameter="7" EllipseOffset="10"/>
+
+        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden"/>
     </Grid>
-</Window>
+
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding InitializeDBCommand}" CommandParameter="{Binding ElementName=MainFrame}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+
+</Controls:MetroWindow>
