--- a/Themes/Generic.xaml
+++ b/Themes/Generic.xaml
@@ -24,7 +24,7 @@
                             <Image Grid.Row="0" Source="{TemplateBinding ImageSource}" Stretch ="Uniform" Margin="2"/>
                             <TextBlock Grid.Row="1" Text="{TemplateBinding Text}" TextAlignment="Center" TextWrapping="Wrap" Margin="2"/>
 
-                            <Rectangle Name="Line" Grid.RowSpan="2" Fill="Transparent" Stroke="RoyalBlue" StrokeDashArray="1,2" StrokeThickness="0"/>
+                            <Rectangle Name="Line" Grid.RowSpan="2" Fill="Transparent" Stroke="#FF8277CB" StrokeDashArray="1,2" StrokeThickness="0"/>
 
                         </Grid>
                     </Border>
