--- a/View/Pages/EnterConnectionStringPage.xaml
+++ b/View/Pages/EnterConnectionStringPage.xaml
@@ -1,19 +1,28 @@
-﻿<Page x:Class="WpfApp1.View.Pages.EnterConnectionStringPage"
+﻿<Page
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    
+      xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+      xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+      Dialog:DialogParticipation.Register="{Binding}"
+      
       xmlns:local="clr-namespace:WpfApp1.View.Pages"
+      x:Class="WpfApp1.View.Pages.EnterConnectionStringPage"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="EnterConnectionStringPage"
-      x:Name="ConnectionStringPage"
-      >
+      x:Name="ConnectionStringPage">
 
-    <Grid Background="White" Height="200">
+    <Page.Resources>
+        <BooleanToVisibilityConverter x:Key="boolToVisibilityConverter"/>
+    </Page.Resources>
+
+    <Grid Background="White">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="70"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -23,19 +32,31 @@
         </Grid.ColumnDefinitions>
 
         <Label x:Name="labelEnterConnectionString" Grid.Row="0" Grid.ColumnSpan="2"
-               Content="Введите релевантную строку подключения в БД:" FontSize="20" HorizontalAlignment="Left" Margin="23,0,0,0" />
+               Content="Введите релевантную строку подключения в БД:" FontSize="20" HorizontalAlignment="Left" 
+               Margin="23,0,0,0" VerticalAlignment="Bottom"/>
 
-        <TextBox Name ="textBoxNewConnectionString" Grid.Row="1" Grid.Column="0"
-                 Text = "{Binding NewConnectionStringTextBox, UpdateSourceTrigger = PropertyChanged}"
+        <TextBox x:Name ="textBoxNewConnectionString" Grid.Row="1" Grid.Column="0"
+                 Text = "{Binding NewConnectionStringTextBox, UpdateSourceTrigger=PropertyChanged}"
+                 IsEnabled="{Binding IsTextBoxAvailable}"
                  MinHeight="25" MinWidth="630"
                  TextWrapping="Wrap" AcceptsReturn="True"
                  VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True"
-                 VerticalAlignment="Top" FontSize="14" HorizontalAlignment="Left" Margin="25,0,0,0" />
+                 VerticalAlignment="Top" FontSize="14" HorizontalAlignment="Left" Margin="25,0,0,0"
+                 Controls:TextBoxHelper.ClearTextButton="True"/>
 
-        <Button Name="InitializeButton" Content="Ввод"
+        <Button x:Name="EnterButton" Content="Ввод"
                 Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Top"
                 MinWidth="65" MinHeight="25"
-                Command="{Binding ReinitializeDBCommand}" CommandParameter="{Binding ElementName=ConnectionStringPage}"/>
+                Command="{Binding ReinitializeDBCommand}" CommandParameter="{Binding ElementName=ConnectionStringPage}"
+                IsEnabled="{Binding Text.Length, ElementName=textBoxNewConnectionString}"
+                Visibility="{Binding DisplayEnterButton, Converter={StaticResource boolToVisibilityConverter}}"/>
+
+
+        <Controls:MetroProgressBar Grid.Row="1" Grid.ColumnSpan="2"
+                                   Height="25" VerticalAlignment="Center"
+                                   Foreground="#FF8277CB" IsIndeterminate="True" Margin="0,2,0,0" 
+                                   Visibility="{Binding DisplayProgressBar, Converter={StaticResource boolToVisibilityConverter}}" 
+                                   EllipseDiameter="7" EllipseOffset="10"/>
 
     </Grid>
 </Page>
