--- a/View/Pages/ImportPage.xaml
+++ b/View/Pages/ImportPage.xaml
@@ -3,16 +3,26 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      
+      xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+      xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+      Dialog:DialogParticipation.Register="{Binding}"
+      
       xmlns:local="clr-namespace:WpfApp1.View.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Import">
 
+    <Page.Resources>
+        <BooleanToVisibilityConverter x:Key="boolToVisibilityConverter"/>
+    </Page.Resources>
+
     <Grid Background="White">
-        
+
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -20,26 +30,27 @@
         </Grid.ColumnDefinitions>
 
         <Button Content="Back" Grid.Column="0" Grid.Row="0"
-                Command="NavigationCommands.BrowseBack" 
-                Padding="3" MinHeight="25" MinWidth="35"
+                IsEnabled="{Binding IsImportAvailable}"
+                Command="NavigationCommands.BrowseBack" Padding="3" MinHeight="25" MinWidth="35"
                 HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0"/>
 
         <TextBox x:Name="importTextBox" Grid.Column="0" Grid.Row="1"
-                 TextWrapping="Wrap" AcceptsReturn="True" 
-                 MinHeight="300" MinWidth="600"
-                 VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True"
+                 TextWrapping="Wrap" AcceptsReturn="True"
                  IsReadOnly="True" Text = "{Binding ImportText, UpdateSourceTrigger = PropertyChanged}" 
-                 HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" 
-                 HorizontalAlignment="Center" VerticalAlignment="Top"
-                 />
+                 HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" BorderThickness="2,2,2,2" Margin="30,0,30,30"/>
 
         <Button x:Name="buttonChooseFile" Content="Открыть"  
                 Grid.Column="1" Grid.Row="1"
                 Command="{Binding ReadCsvFileAndAddToBDCommand}"
+                IsEnabled="{Binding IsImportAvailable}"
                 VerticalAlignment="Top" HorizontalAlignment="Left" 
                 MinHeight="25" MinWidth="65"
                 HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
 
-
+        <Controls:MetroProgressBar Grid.Row="2" Grid.ColumnSpan="3"
+           Height="25" VerticalAlignment="Top"
+           Foreground="#FF8277CB" IsIndeterminate="True" 
+           Visibility="{Binding DisplayProgressBar, Converter={StaticResource boolToVisibilityConverter}}" 
+           EllipseDiameter="7" EllipseOffset="10"/>
     </Grid>
 </Page>
