--- a/View/Pages/ExportPage.xaml
+++ b/View/Pages/ExportPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="WpfApp1.View.Pages.Export"
+﻿<Page x:Class="WpfApp1.View.Pages.ExportPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,9 +10,12 @@
       Dialog:DialogParticipation.Register="{Binding}"
      
       xmlns:local="clr-namespace:WpfApp1.View.Pages" 
+      xmlns:viewmodel="clr-namespace:WpfApp1.ViewModel.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodel:ExportPageViewModel}"
+      
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Export">
+      Title="Export"
+      Name="PageExport">
 
     <Page.Resources>
         <BooleanToVisibilityConverter x:Key="boolToVisibilityConverter"/>
@@ -45,7 +48,6 @@
                 Grid.Column="3" Grid.Row="2" 
                 MinWidth="65" MinHeight="25"
                 Command="{Binding ExportIntoFileCommand}"
-                IsEnabled="{Binding IsExportAvailable}"
                 HorizontalAlignment="Center" VerticalAlignment="Top" 
                 ScrollViewer.VerticalScrollBarVisibility="Disabled" VerticalContentAlignment="Center" Margin="0,55,0,0"/>
 
