--- a/View/Pages/MenuPage.xaml
+++ b/View/Pages/MenuPage.xaml
@@ -5,6 +5,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       
       xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+      xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+      Dialog:DialogParticipation.Register="{Binding}"
       
       xmlns:local="clr-namespace:WpfApp1.View.Pages"
       xmlns:n="clr-namespace:WpfApp1"      
