--- a/View/Pages/ViewFilePage.xaml
+++ b/View/Pages/ViewFilePage.xaml
@@ -1,18 +1,26 @@
-﻿<Page x:Class="WpfApp1.View.Pages.ViewingPage"
+﻿<Page x:Class="WpfApp1.View.Pages.ViewFilePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WpfApp1.View.Pages"
+      mc:Ignorable="d" 
       
       xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
       xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+      xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+      
+      xmlns:viewmodels="clr-namespace:WpfApp1.ViewModel.ViewModels" 
+      d:DataContext="{d:DesignInstance Type=viewmodels:ViewFilePageViewModel}"
+      
       Dialog:DialogParticipation.Register="{Binding}"
       
-      xmlns:viewmodel="clr-namespace:WpfApp1.ViewModel.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodel:ViewingPageViewModel}"
-      mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ViewingPage">
+      Title="ViewFilePage">
+
+    <Page.Resources>
+        <BooleanToVisibilityConverter x:Key="boolToVisibilityConverter"/>
+    </Page.Resources>
 
     <Grid Background="White">
         <Grid.RowDefinitions>
@@ -21,14 +29,34 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
 
-        <Button Content="Назад" Grid.Row="0"
-                Command="NavigationCommands.BrowseBack" 
-                Padding="3" MinHeight="25" MinWidth="35"
-                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0"/>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="10*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="40"/>
+            </Grid.ColumnDefinitions>
+
+            <Button Name="BackButton" Content="Назад" Grid.Column="0"
+                    Command="NavigationCommands.BrowseBack" 
+                    Padding="3" MinHeight="25" MinWidth="35"
+                    HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0"/>
+
+            <TextBox Name="FileNameTextBox" Grid.Column="0"
+                     Text="{Binding FileName}"
+                     Height="25" Margin="40,0,0,5" BorderThickness="2,2,2,2"
+                     VerticalAlignment="Bottom" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled" 
+                     IsReadOnly="True"/>
+
+            <Button Name="OpenFileButton" Content="Открыть" Grid.Column="1"
+                    Command="{Binding OpenFileCommand}"
+                    Padding="3" MinHeight="25" MinWidth="35" 
+                    HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,5"/>
+
+        </Grid>
 
         <ListView Language="ru-RU" Name="ListViewForUsers" Grid.Row="1" Margin="40,0,40,0"
-                  ItemsSource="{Binding UsersCollection}"
-                  ScrollViewer.CanContentScroll="True" BorderThickness="2,2,2,2">
+              ItemsSource="{Binding UsersCollection}"
+              ScrollViewer.CanContentScroll="True" BorderThickness="2,2,2,2">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Дата" DisplayMemberBinding="{Binding Path=Date}" Width="100"/>
@@ -43,9 +71,9 @@
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" Height="25" HorizontalAlignment="Right" Margin="0,0,40,0">
             <Button Content="&lt;&lt;" Margin="5,0,5,0" FontWeight="Bold" Width="40" 
-                    IsEnabled="{Binding IsFirstEnable}" Command="{Binding FirstCommand}"/>
+                IsEnabled="{Binding IsFirstEnable}" Command="{Binding FirstCommand}"/>
             <Button Content="&lt;" Margin="5,0,5,0" FontWeight="Bold" Width="40" 
-                    IsEnabled="{Binding IsPreviousEnable}" Command="{Binding PreviousCommand}"/>
+                IsEnabled="{Binding IsPreviousEnable}" Command="{Binding PreviousCommand}"/>
             <TextBlock VerticalAlignment="Center">
                 <TextBlock.Text>
                     <MultiBinding StringFormat="{} {0} из {1}">
@@ -55,19 +83,19 @@
                 </TextBlock.Text>
             </TextBlock>
             <Button Content=">" Margin="5,0,5,0" FontWeight="Bold" Width="40" 
-                    IsEnabled="{Binding IsNextEnable}" Command="{Binding NextCommand}"/>
+                IsEnabled="{Binding IsNextEnable}" Command="{Binding NextCommand}"/>
             <Button Content=">>" Margin="5,0,0,0" FontWeight="Bold" Width="40" 
-                    IsEnabled="{Binding IsLastEnable}" Command="{Binding LastCommand}"/>
+                IsEnabled="{Binding IsLastEnable}" Command="{Binding LastCommand}"/>
         </StackPanel>
     </Grid>
 
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
-            <i:InvokeCommandAction Command="{Binding ShowSelectionCommand}" />
+            <i:InvokeCommandAction Command="{Binding PageIsLoadedCommand}" />
         </i:EventTrigger>
         <i:EventTrigger EventName="Unloaded">
             <i:InvokeCommandAction Command="{Binding CloseViewingPageCommand}" />
         </i:EventTrigger>
     </i:Interaction.Triggers>
-
+    
 </Page>
