--- a/View/Pages/MenuPage.xaml
+++ b/View/Pages/MenuPage.xaml
@@ -13,8 +13,11 @@
       mc:Ignorable="d" 
       
       x:Name="Menu"    
-      xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-            
+      xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
+      
+      xmlns:viewmodels="clr-namespace:WpfApp1.ViewModel.ViewModels" 
+      d:DataContext="{d:DesignInstance Type=viewmodels:MenuPageViewModel}"
+      
       d:DesignHeight="450" d:DesignWidth="800"
       Title="MenuPage">
 
@@ -30,19 +33,31 @@
 
     <Grid Background="White">
 
-        <n:NavigationButton x:Name ="ImportButton" Text="Импорт" HorizontalAlignment="Left" VerticalAlignment="Top" MinHeight="70" MinWidth="60"
+        <n:NavigationButton x:Name ="ImportButton" Text="Импорт" HorizontalAlignment="Left" VerticalAlignment="Top" 
+                            MinHeight="70" MinWidth="60" Margin="10,10,0,0"
                             Command="{Binding OpenPageCommand}" CommandParameter="{Binding ElementName=ImportButton}"
                             ImageSource="/View/Images/Import.png" NavigationUri="/View/Pages/ImportPage.xaml" FontWeight="Bold"/>
 
-        <n:NavigationButton x:Name ="ExportButton" Text="Экспорт" HorizontalAlignment="Left" VerticalAlignment="Top" MinHeight="70" MinWidth="60"
+        <n:NavigationButton x:Name ="ExportButton" Text="Экспорт" HorizontalAlignment="Left" VerticalAlignment="Top" 
+                            MinHeight="70" MinWidth="60"
                             Command="{Binding OpenPageCommand}" CommandParameter="{Binding ElementName=ExportButton}"
-                            ImageSource="/View/Images/Export.png" NavigationUri="/View/Pages/ExportPage.xaml" Margin="77,2,2,2"
+                            ImageSource="/View/Images/Export.png" NavigationUri="/View/Pages/ExportPage.xaml" Margin="87,10,0,0"
                             IsEnabled="{Binding IsExportAvailable}" Style="{StaticResource NavButtonStyle}" FontWeight="Bold"/>
 
-        <n:NavigationButton x:Name ="ViewButton" Text="Просмотр" HorizontalAlignment="Left" VerticalAlignment="Top" MinHeight="70" MinWidth="60"
-                            Command="{Binding OpenPageCommand}" CommandParameter="{Binding ElementName=ViewButton}"
-                            ImageSource="/View/Images/View.png" NavigationUri="/View/Pages/ViewingPage.xaml" Margin="154,2,2,2" 
+        <n:NavigationButton x:Name ="ViewSelectionButton" Text="Просмотр&#xa;выборки" HorizontalAlignment="Left" 
+                            VerticalAlignment="Top" MinHeight="70" MinWidth="60"
+                            Command="{Binding OpenPageCommand}" CommandParameter="{Binding ElementName=ViewSelectionButton}"
+                            ImageSource="/View/Images/ViewFromDB.png" NavigationUri="/View/Pages/ViewSelectionPage.xaml" 
+                            Margin="164,10,0,0" 
                             IsEnabled="{Binding IsViewingAvailable}" Style="{StaticResource NavButtonStyle}" FontWeight="Bold"/>
+
+        <n:NavigationButton x:Name ="ViewFileButton" Text="Просмотр&#xa;файла" HorizontalAlignment="Left" VerticalAlignment="Top" 
+                            MinHeight="70" MinWidth="60"
+                            Command="{Binding OpenPageCommand}" CommandParameter="{Binding ElementName=ViewFileButton}"
+                            ImageSource="/View/Images/ViewFromFile.png" NavigationUri="/View/Pages/ViewFilePage.xaml" 
+                            Margin="241,10,0,0" 
+                            IsEnabled="{Binding IsViewingAvailable}" Style="{StaticResource NavButtonStyle}" FontWeight="Bold"/>
+        
     </Grid>
 
     <i:Interaction.Triggers>
